# mega_pokerr

./: Cargo.toml  LICENSE  PLAN.txt  README.md  SDL2_gfx.lib  index.html  poker.db  style.css  zapiski.txt
.github/workflows/: rust.yml
src/: Card.rs  card.rs  lib.rs  main.rs  player.rs  players_example.rs  render.rs  round.rs
src/logic/: best_combination.rs  betting_system.rs  card.rs  choose_winner.rs  combinations.rs  constants.rs  game.rs  hand_ranking.rs  mod.rs  player.rs  round.rs  save_game.rs  tactics1.rs
src/models/: card.rs
src/sauron_app/: ai.rs  constants.rs  game.rs  gui.rs  make_bets.rs  mod.rs  style.rs
src/sdl2_app/: app_context.rs  betting_state.rs  button.rs  constants.rs  end_round_state.rs  make_bet.rs  menu.rs  mod.rs  option_screen.rs  positions.rs  render.rs  render_button.rs  render_cards.rs  render_screen.rs  render_text.rs  resources.rs  save_game.rs  send_bet.rs  settings.rs  slider.rs  start_screen.rs  tactic1.rs
src/terminal_app/: get_bet.rs  mod.rs  prints.rs
tests/: test_best_combination.rs  test_bets.rs  test_card.rs  test_choose_winner.rs  test_combinations.rs  test_database.rs  test_sorting_rankhandings.rs
