[package]
name = "mega_pokerr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
run_with_sdl2 = ["sdl2", "rusqlite"]
compile_with_sauron = ["sauron"]

[dependencies]
rand = "0.8"
getrandom = { version = "0.2.16", features = ["js"] }
itertools = "0.14.0"
log = "0.4"
env_logger = "0.10"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.37.0"
default-features = false
features = ["bundled"]
optional = true


[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image", "ttf"]
optional = true

[dependencies.sauron]
version = "0.70.0"
optional = true

[[bin]]
name = "sdl2_app"
path = "src/bin/sdl2_app/main.rs"

[[bin]]
name = "terminal_app"
path = "src/bin/terminal_app/main.rs"




